<resources>
    <string name="app_name">Бражный калькулятор</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>
    <string name="nameFieldSugar">Вес сахара (гр)</string>
    <string name="nameButtonWeight">...</string>
    <string name="nameFieldVolumeSugar">Объём сахара (мл)</string>
    <string name="nameFieldVolumeWater">Объём воды (мл)</string>
    <string name="nameFieldAllVolume">Общий объём (мл)</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_about">О программе</string>
    <string name="nameDryYeast">Сухие дрожжи</string>
    <string name="nameCompressedYeast">Пресованные дрожжи</string>
    <string name="nameDryYeastGr">Сухие дрожжи (гр)</string>
    <string name="nameCompressedYeastGr">Пресованные дрожжи (гр)</string>
    <string name="nameGidromodule">Гидромодуль</string>
    <string name="nameButtonSaveSettings">Сохранить настройки</string>
    <string name="messageSettingsSaved">Настройки успешно сохранены</string>
    <string name="nameKarbamid">Карбамид (гр)</string>
    <string name="nameMagniyaSulphat">Магния сульфат, семиводный (гр)</string>
    <string name="nameNatriyaKhlorid">Натрия хлорид (гр)</string>
    <string name="nameKaliyaKhlorid">Калия хлорид</string>
    <string name="nameMargantsaSulphat">Марганца сульфат</string>
    <string name="nameTsinkaSulphat">Цинка сульфат, семиводный</string>
    <string name="nameKaliyMonophosphat">Калий монофосфат</string>
    <string name="nameAktiveUgol">Активированный уголь</string>
    <string name="nameMel">Мел</string>
    <string name="nameOlivkovoeMaslo">Оливковое масло, 1 капля</string>
    <string name="namePenogasitel">Печенье, порошок (пеногаситель)</string>
    <string name="nameAllSoley">Всего солей</string>
    <string name="titleActionDeleteBraga">Запрос на удаление рецепта</string>
    <string name="questionActionDeleteBraga">Вы точно хотите удалить этот рецепт?</string>
    <string name="buttonYes">Да</string>
    <string name="buttonNo">Нет</string>
    <string name="headerDialogNewRecept">Название нового рецепта браги</string>
    <string name="title_activity_edit_recept">editReceptActivity</string>
    <!--
    <string name="buttonCreate">Создать</string>
    <string name="buttonCancel">Отменить</string>
-->
</resources>
