<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gindos.bragacalculator.settingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical"
            android:id="@+id/rgYeast">

            <RadioButton
                android:text="@string/nameDryYeast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbDryYeast"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/nameCompressedYeast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbCompressedYeast"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:text="@string/nameGidromodule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etSizeGidromodule"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:text="@string/nameButtonSaveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btSaveSettings"
            android:onClick="onClickBtSaveSettings" />

    </LinearLayout>
</RelativeLayout>
